--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,8 +24,49 @@
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 }
 
+.loader {
+    width: 50px;
+    aspect-ratio: 1;
+    display: grid;
+    border-radius: 50%;
+    background: linear-gradient(
+                0deg,
+                rgba(48, 137, 66, 0.5) 30%,
+                #0000 0 70%,
+                rgba(48, 137, 66, 1) 0
+            )
+            50%/8% 100%,
+        linear-gradient(
+                90deg,
+                rgba(48, 137, 66, 0.25) 30%,
+                #0000 0 70%,
+                rgba(48, 137, 66, 0.75) 0
+            )
+            50%/100% 8%;
+    background-repeat: no-repeat;
+    animation: l23 1s infinite steps(12);
+}
+.loader::before,
+.loader::after {
+    content: "";
+    grid-area: 1/1;
+    border-radius: 50%;
+    background: inherit;
+    opacity: 0.915;
+    transform: rotate(30deg);
+}
+.loader::after {
+    opacity: 0.83;
+    transform: rotate(60deg);
+}
+@keyframes l23 {
+    100% {
+        transform: rotate(1turn);
+    }
+}
+
 @layer base {
-  :root {
+    :root {
         --background: 0 0% 100%;
         --foreground: 0 0% 3.9%;
         --card: 0 0% 100%;
@@ -52,7 +93,7 @@
         --chart-5: 27 87% 67%;
         --radius: 0.5rem;
     }
-  .dark {
+    .dark {
         --background: 0 0% 3.9%;
         --foreground: 0 0% 98%;
         --card: 0 0% 3.9%;
@@ -81,10 +122,10 @@
 }
 
 @layer base {
-  * {
-    @apply border-border;
+    * {
+        @apply border-border;
     }
-  body {
-    @apply bg-background text-foreground;
+    body {
+        @apply bg-background text-foreground;
     }
 }
